@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+1/31/24: Fixed adjustment when assigning current stage positions to a
+Navigator item and improved the "disparity in stage position" reports from
+Realign to Item by using just the shifts in the images (In 4.1).
 1/31/24: SEM_4-1-3
 1/31/24: Fixed output of ReporCameraLength command in STEM mode (In 4.1).
 
